# pinocchio-init

./: Cargo.toml  README.md
src/: main.rs
templates/basic/: Cargo.toml  Makefile  README.md  template.Cargo.toml
templates/basic/src/: lib.rs
templates/basic/tests/: tests.rs
templates/full/: Makefile  README.md  template.Cargo.toml
templates/full/src/: error.rs  lib.rs
templates/full/src/instruction/: decrement.rs  increment.rs
templates/full/tests/: tests.rs
