[package]
name = "pinocchio-init"
version = "0.1.0"
description = "A CLI tool for initializing new Solana programs using Pinocchio."
homepage = "https://github.com/bidhan-a/pinocchio-init"
repository = "https://github.com/bidhan-a/pinocchio-init"
readme = "README.md"
keywords = ["solana", "cli", "program", "pinocchio"]
categories = ["command-line-utilities"]
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
include_dir = "0.7.4"
regex = "1.11.1"
solana-sdk = "2.2.2"
walkdir = "2.5.0"
